# SnippsCCore

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: Category.c  Category.h  CategoryWatcher.c  CategoryWatcher.h  SnippsDB.c  SnippsDB.h  list.c  list.h  utils.h
test/: main.c  testList.c  testSnippsDB.c
